--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             border: none;
             width: 200px;
             margin: 5px;
+            text-transform: uppercase; /* Force uppercase for easier reading */
         }
 
         button {
@@ -63,7 +64,7 @@
         button:disabled { background-color: grey; cursor: not-allowed; }
 
         .status { margin-top: 10px; font-style: italic; color: #aaa; }
-        .code-display { font-family: monospace; font-size: 1.2em; background: #000; padding: 5px 10px; border-radius: 4px; user-select: all;}
+        .code-display { font-family: monospace; font-size: 1.5em; background: #000; padding: 10px; border-radius: 4px; user-select: all; letter-spacing: 2px; color: #4facfe;}
 
         /* Game Board Area */
         #game-container {
@@ -80,7 +81,7 @@
 
         .boards-wrapper {
             display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 3 Columns for 3 Levels */
+            grid-template-columns: repeat(3, 1fr);
             gap: 30px;
         }
 
@@ -98,7 +99,6 @@
 
         .grid {
             display: grid;
-            /* 3x3 Grid Sizing */
             grid-template-columns: repeat(3, 60px); 
             grid-template-rows: repeat(3, 60px);
             gap: 5px;
@@ -124,8 +124,8 @@
 
         .cell:hover { background-color: #2a3b55; }
         .cell.taken { cursor: default; }
-        .cell.x { color: #4facfe; } /* Blue for X */
-        .cell.o { color: #f093fb; } /* Pink for O */
+        .cell.x { color: #4facfe; }
+        .cell.o { color: #f093fb; }
         .cell.win { background-color: #2ecc71; color: white; }
 
         #restart-btn { display: none; margin-top: 20px; background-color: #2ecc71;}
@@ -134,20 +134,20 @@
 </head>
 <body>
 
-    <h1>3D Tic-Tac-Toe (3x3x3)</h1>
+    <h1>3D Tic-Tac-Toe</h1>
 
     <div id="connection-panel">
         <div id="menu-start">
             <h3>Multiplayer Setup</h3>
             <button onclick="hostGame()">Host Game</button>
             <span style="margin: 0 10px;">OR</span>
-            <input type="text" id="join-code-input" placeholder="Enter Host Code">
+            <input type="text" id="join-code-input" placeholder="Enter 9-Char Code">
             <button onclick="joinGame()">Join Game</button>
         </div>
 
         <div id="menu-host-waiting" style="display:none;">
             <p>Share this code with your friend:</p>
-            <div class="code-display" id="my-code">Generating...</div>
+            <div class="code-display" id="my-code">...</div>
             <p class="status">Waiting for opponent to join...</p>
         </div>
 
@@ -179,11 +179,10 @@
 
 <script>
     /**
-     * 3D Tic Tac Toe (3x3x3) Logic & Networking
+     * 3D Tic Tac Toe (3x3x3) with Short Codes
      */
 
-    // Game Constants
-    const SIZE = 3; // CHANGED to 3
+    const SIZE = 3;
     let board = []; 
     let myPlayer = ''; 
     let currentPlayer = 'X';
@@ -228,14 +227,38 @@
 
     // --- Networking Functions ---
 
+    // Generate a random 9-character ID (uppercase letters + numbers)
+    function generateShortId() {
+        const chars = 'ABCDEFGHJKLMNPQRSTUVWXYZ23456789'; // Removed I, 1, 0, O for clarity
+        let result = '';
+        for (let i = 0; i < 9; i++) {
+            result += chars.charAt(Math.floor(Math.random() * chars.length));
+        }
+        return result;
+    }
+
     function hostGame() {
         document.getElementById('menu-start').style.display = 'none';
         document.getElementById('menu-host-waiting').style.display = 'block';
 
-        peer = new Peer(); 
+        // 1. Generate Custom Short ID
+        const customId = generateShortId();
+        document.getElementById('my-code').innerText = customId;
+
+        // 2. Pass it to PeerJS
+        peer = new Peer(customId); 
         
         peer.on('open', (id) => {
-            document.getElementById('my-code').innerText = id;
+            console.log("My peer ID is: " + id);
+        });
+
+        peer.on('error', (err) => {
+            // If ID is taken (rare), try again
+            console.error(err);
+            if (err.type === 'unavailable-id') {
+                alert("Code collision. Retrying...");
+                hostGame();
+            }
         });
 
         peer.on('connection', (connection) => {
@@ -247,17 +270,23 @@
     }
 
     function joinGame() {
-        const code = document.getElementById('join-code-input').value.trim();
-        if (!code) return alert("Please enter a code");
+        // Force uppercase to match generator
+        const code = document.getElementById('join-code-input').value.trim().toUpperCase();
+        if (!code || code.length !== 9) return alert("Please enter a valid 9-character code");
 
         document.getElementById('menu-start').style.display = 'none';
         document.getElementById('menu-status').style.display = 'block';
 
-        peer = new Peer();
+        peer = new Peer(); // Joiner doesn't need a custom ID
         
         peer.on('open', () => {
             conn = peer.connect(code);
             setupConnection();
+        });
+
+        peer.on('error', (err) => {
+            alert("Could not connect. Check the code.");
+            location.reload();
         });
     }
 
